project todo list

--- a/crud/index.html
+++ b/crud/index.html
@@ -13,12 +13,17 @@
         padding: 5px 10px;
         margin-left: 10px;
     }
+    #error {
+        display: none;
+        color: red;
+    }
 </style>
 
 <body>
     <form>
         <label for="">name</label>
         <textarea id="content"></textarea>
+        <span id="error">chua co text</span>
     </form>
     <button id="submit">submit</button>
     <div id="results">
