--- a/crud/index.html
+++ b/crud/index.html
@@ -25,7 +25,7 @@
         <textarea id="content"></textarea>
         <span id="error">chua co text</span>
     </form>
-    <button id="submit">submit</button>
+    <button>tính</button>
     <div id="results">
         không có việc
     </div>
