learn function and return

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Hello</h1>
 </body>
 <script src="./for.js"></script>
-<script src="./function.js"></script>
+<script src="./function/learn.js"></script>
+<script src="./function/exercise.js"></script>
 <script src="./filter.js"></script>
 </html>
